--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,7 +10,7 @@
 
   <div class="row" id="navbarSupportedContent">
      <div class="navbar-nav ml-auto">
-      <%= link_to "List My Kitchen", new_kitchen_path, class: "btn btn-outline-info my-2 my-sm-0 mr-2" %>
+      <%= link_to "List My Kitchen", new_kitchen_path, class: "btn btn-info my-2 my-sm-0 mr-2" %>
     </div>
     <ul class="navbar-nav mr-auto">
       <% if user_signed_in? %>
@@ -28,7 +28,7 @@
           </div>
         </li>
       <% else %>
-        <li class="nav-item">
+        <li class="nav-item mr-16">
           <%= link_to "Login", new_user_session_path, class: "nav-link", data: {toggle: "modal", target: "#newUserModal"}%>
         </li>
       <% end %>
