add new kitchen form in ktichens/new (missing : kitchen amenities)

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
             <%= link_to "Bookings", bookings_path, class: "dropdown-item" %>
             <%= link_to "Kitchens", kitchens_path, class: "dropdown-item" %>
             <hr>
-            <%= link_to "Profile", @user, class: "dropdown-item" %>
+            <%#= link_to "Profile", @user, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
