--- a/app/views/kitchens/new.html.erb
+++ b/app/views/kitchens/new.html.erb
@@ -1,2 +1,23 @@
-<h1>Kitchen#new</h1>
-<p>Find me in app/views/kitchen/new.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 mx-auto my-5">
+      <div class="card p-4">
+        <h1>List your kitchen</h1>
+          <%= simple_form_for @kitchen do |f| %>
+            <%= f.input :title %>
+            <%= f.input :description %>
+            <%= f.input :address %>
+            <%= f.input :size %><p> m2 </p>
+            <%= f.input :opening_time %>
+            <%= f.input :closing_time %>
+            <%= f.input :price %><p>$ / Day</p>
+            <%= f.input :cancellation_policy, collection: Kitchen::POLICY %>
+            <%= f.input :listing_status, collection: Kitchen::STATUS %>
+            <%= f.submit "List Kitchen", class:"btn btn-primary" %>
+          <% end %>
+      </div>
+      <hr>
+      <%= link_to "Back", kitchens_path, class: "btn btn-warning" %>
+    </div>
+  </div>
+</div>
