--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Kitchen#index</h1>
-<p>Find me in app/views/kitchen/index.html.erb</p>
+<div class="container py-5">
+    <div class="row my-5">
+        <% @kitchens.each do |kitchen| %>
+            <div class="col-md-4">
+                <div class="card" style="width: 100%;">
+                    <%# image cloudinary %>
+                    <div class="card-body">
+                        <h5 class="card-title"><%= kitchen.title %></h5>
+                        <p class="card-text"></p>
+                        <%= link_to "See more", kitchen, class: "btn btn-primary" %>
+                    </div>
+                </div>
+            </div>
+         <% end %>
+    </div>
+</div>
