--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Kitchen#show</h1>
-<p>Find me in app/views/kitchen/show.html.erb</p>
+
+
+<div class="container py-3">
+  <h1><%= @kitchen.title %></h1>
+  <p class="card-text">
+    <%= @kitchen.description %>
+    <br>
+    <%= @kitchen.address %> | <%= @kitchen.size %>
+  </p>
+  <hr>
+  <h4>Rent <%= @kitchen.title %></h4>
+  <%= simple_form_for [ @kitchen, @booking] do |f| %>
+    <%= f.input :start_date, html5: true %>
+    <%= f.input :end_date, html5: true %>
+    <%= f.submit "Rent" %>
+  <% end %>
+  <hr>
+  <%#= link_to "Back", user_path, class: "btn btn-warning" %>
+</div>
+
