--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -9,12 +9,18 @@
   </p>
   <hr>
   <h4>Rent <%= @kitchen.title %></h4>
-  <%= simple_form_for [ @kitchen, @booking] do |f| %>
-    <%= f.input :start_date, html5: true %>
-    <%= f.input :end_date, html5: true %>
-    <%= f.submit "Rent" %>
-  <% end %>
+    <div id='kitchen-booking-dates' data-unavailable="<%= @kitchen.unavailable_dates.to_json %>">
+        <% if current_user.id != @kitchen.user_id  %>
+           <%= simple_form_for([@kitchen, @booking]) do |f| %>
+               <%= f.input :start_date, as: :string, type: :text %>
+               <%= f.input :end_date, as: :string, type: :text %>
+               <%= f.submit "Rent", class: "btn btn-primary" %>
+            <% end %>
+        <% end %>
+    </div>
   <hr>
   <%#= link_to "Back", user_path, class: "btn btn-warning" %>
 </div>
+
+
 
