--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 <div class="container py-5">
   <h1>My Bookings</h1>
   <%= link_to "Rent a kitchen", kitchens_path, class: "btn btn-primary my-4" %>
+
+  <%# if current_user == @user %>
+
+  <%# end %>
   <div class="row">
     <% @bookings.each do |booking| %>
       <div class="col-md-4 my-4">
