--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -10,6 +10,7 @@
   <hr>
   <h4>Rent <%= @kitchen.title %></h4>
     <div id='kitchen-booking-dates' data-unavailable="<%= @kitchen.unavailable_dates.to_json %>">
+      <% if current_user %>
         <% if current_user.id != @kitchen.user_id  %>
            <%= simple_form_for([@kitchen, @booking]) do |f| %>
                <%= f.input :start_date, as: :string, type: :text %>
@@ -17,6 +18,7 @@
                <%= f.submit "Rent", class: "btn btn-primary" %>
             <% end %>
         <% end %>
+      <% end %>
     </div>
   <hr>
   <%#= link_to "Back", user_path, class: "btn btn-warning" %>
