--- a/app/views/kitchens/show.html.erb
+++ b/app/views/kitchens/show.html.erb
@@ -10,15 +10,15 @@
   <hr>
   <h4>Rent <%= @kitchen.title %></h4>
     <div id='kitchen-booking-dates' data-unavailable="<%= @kitchen.unavailable_dates.to_json %>">
-      <% if current_user %>
-        <% if current_user.id != @kitchen.user_id  %>
+      <%# if current_user %>
+        <%# if current_user.id != @kitchen.user_id  %>
            <%= simple_form_for([@kitchen, @booking]) do |f| %>
                <%= f.input :start_date, as: :string, type: :text %>
                <%= f.input :end_date, as: :string, type: :text %>
                <%= f.submit "Rent", class: "btn btn-primary" %>
             <% end %>
-        <% end %>
-      <% end %>
+        <%# end %>
+      <%# end %>
     </div>
   <hr>
   <%#= link_to "Back", user_path, class: "btn btn-warning" %>
