--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container py-5">
     <div class="row my-5">
         <% @kitchens.each do |kitchen| %>
-            <div class="col-md-4">
+            <div class="col-md-4 py-2">
                 <div class="card" style="width: 100%;">
                     <%# image cloudinary %>
                     <div class="card-body">
