--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,3 +27,29 @@
     <% end %>
   </div>
 </div>
+
+<div class="container py-5">
+  <h1>Bookings Received</h1>
+  <div class="row">
+    <% @bookings_received.each do |booking| %>
+      <div class="col-md-4 my-4">
+        <div class="card" style="width: 100%;">
+          <div class="card-body">
+            <h5 class="card-title"><%= booking.kitchen.title %></h5>
+            <p class="card-text">
+              <%= booking.user %>
+              <br>
+              <%= booking.kitchen.address %> | <%= booking.booking_status %>
+              <br>
+              <p> Rent kitchen on: <%= booking.start_date %> - <%= booking.end_date %>
+              <br>
+              <%= link_to "Edit Booking", booking_path, class: "btn btn-info" %>
+              <hr>
+              <%= link_to "See #{booking.kitchen.title}", kitchen_path(booking.kitchen), class: "btn btn-info" %>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+
