--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,31 @@
+<div class="container">
+  <div class="row">
+    <%= @user.first_name.capitalize %>
+  </div>
+</div>
+
+
+
+ <% if current_user == @user %>
+
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
-    <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">Home</a>
+    <a class="nav-item nav-link active" id="nav-favorites-tab" data-toggle="tab" href="#nav-favorites" role="tab" aria-controls="nav-favorites aria-selected="true">Favorites</a>
     <a class="nav-item nav-link" id="nav-bookings-tab" data-toggle="tab" href="#nav-bookings" role="tab" aria-controls="nav-bookings" aria-selected="false">My Bookings</a>
     <a class="nav-item nav-link" id="nav-bookings-received-tab" data-toggle="tab" href="#nav-bookings-received" role="tab" aria-controls="nav-bookings-received" aria-selected="false">Bookings Received</a>
+    <a class="nav-item nav-link" id="nav-my-kitchens-tab" data-toggle="tab" href="#nav-my-kitchens" role="tab" aria-controls="nav-my-kitchens" aria-selected="false">My Kitchens</a>
   </div>
 </nav>
+
+
 <div class="tab-content" id="nav-tabContent">
-  <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">...</div>
-  <div class="tab-pane fade" id="nav-bookings" role="tabpanel" aria-labelledby="nav-profile-tab">
+  <div class="tab-pane fade show active" id="nav-favorites" role="tabpanel" aria-labelledby="nav-favorites-tab">...</div>
+  <div class="tab-pane fade" id="nav-bookings" role="tabpanel" aria-labelledby="nav-bookings-tab">
     <div class="container py-5">
       <h1>My Bookings</h1>
       <%= link_to "Rent a kitchen", kitchens_path, class: "btn btn-primary my-4" %>
 
-      <%# if current_user == @user %>
 
-      <%# end %>
       <div class="row">
         <% @bookings_requested.each do |booking| %>
           <div class="col-md-4 my-4">
@@ -26,6 +37,12 @@
                   <br>
                   <p> Rent kitchen on: <%= booking.start_date %> - <%= booking.end_date %>
                   <br>
+                  <% if (booking.booking_status == "pending") && Date.today() < (booking.start_date - 1) %>
+                    <%= link_to "Cancel Booking", cancel_booking_path(booking), class: "btn btn-info", method: :patch %>
+                  <% elsif booking.booking_status == "accepted" %>
+                    <%= link_to "Pay", confirm_booking_path(booking), class: "btn btn-info", method: :patch %>
+                  <% end %>
+                  <hr>
                   <%= link_to "See Booking Details", booking_path(booking), class: "btn btn-info" %>
                   <hr>
                   <%= link_to "See #{booking.kitchen.title}", kitchen_path(booking.kitchen), class: "btn btn-info" %>
@@ -35,12 +52,11 @@
         <% end %>
       </div>
     </div>
-
-
   </div>
+
   <div class="tab-pane fade" id="nav-bookings-received" role="tabpanel" aria-labelledby="nav-bookings-received-tab">
   <div class="container py-5">
-  <h1>Bookings Received</h1>
+    <h1>Bookings Received</h1>
     <div class="row">
       <% @bookings_received.each do |booking| %>
         <div class="col-md-4 my-4">
@@ -48,15 +64,19 @@
             <div class="card-body">
               <h5 class="card-title"><%= booking.kitchen.title %></h5>
               <p class="card-text">
-                <%= booking.user %>
+                <%= booking.user.first_name.capitalize %>
                 <br>
                 <%= booking.kitchen.address %> | <%= booking.booking_status %>
                 <br>
                 <p> Rent kitchen on: <%= booking.start_date %> - <%= booking.end_date %>
                 <br>
 
-                  <%= link_to "Confirm", confirm_booking_path(booking), class: "btn btn-info", method: :patch %>
-                  <%= link_to "Decline", "#", class: "btn btn-info" %>
+                <% if booking.booking_status == "pending"  %>
+                  <%= link_to "Accept", accept_booking_path(booking), class: "btn btn-info", method: :patch %>
+                  <%= link_to "Decline", cancel_booking_path(booking), class: "btn btn-info", method: :patch %>
+                <% elsif (booking.booking_status == "accepted") && Date.today() < (booking.start_date - 1) %>
+                  <%= link_to "Cancel Booking", cancel_booking_path(booking), class: "btn btn-info", method: :patch %>
+                <% end %>
                 <hr>
               </div>
             </div>
@@ -65,7 +85,38 @@
       </div>
   </div>
   </div>
+
+  <div class="tab-pane fade" id="nav-my-kitchens" role="tabpanel" aria-labelledby="nav-my-kitchens-tab">
+  <div class="container py-5">
+    <h1>My Kitchens</h1>
+    <div class="row">
+      <% @my_kitchens.each do |kitchen| %>
+        <div class="col-md-4 my-4">
+          <div class="card" style="width: 100%;">
+            <div class="card-body">
+              <h5 class="card-title"><%= kitchen.title %></h5>
+              <p class="card-text">
+                <%= kitchen.description %>
+                <br>
+                <%= kitchen.address %> | <%= kitchen.size %>
+                <br>
+                <%= link_to "Edit Kitchen", edit_kitchen_path(kitchen), class: "btn btn-info" %>
+                <hr>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+  </div>
+  </div>
+
+
+
+
+
 </div>
+
+<% end %>
 
 
 
