--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,25 +29,22 @@
       <div class="row">
         <% @bookings_requested.each do |booking| %>
           <div class="col-md-4 my-4">
-            <div class="card" style="width: 100%;">
-              <div class="card-body">
-                <h5 class="card-title"><%= booking.kitchen.title %></h5>
-                <p class="card-text">
-                  <%= booking.kitchen.address %> | <%= booking.booking_status %>
-                  <br>
-                  <p> Rent kitchen on: <%= booking.start_date %> - <%= booking.end_date %>
-                  <br>
-                  <% if (booking.booking_status == "pending") && Date.today() < (booking.start_date - 1) %>
-                    <%= link_to "Cancel Booking", cancel_booking_path(booking), class: "btn btn-info", method: :patch %>
-                  <% elsif booking.booking_status == "accepted" %>
-                    <%= link_to "Pay", confirm_booking_path(booking), class: "btn btn-info", method: :patch %>
-                  <% end %>
-                  <hr>
-                  <%= link_to "See Booking Details", booking_path(booking), class: "btn btn-info" %>
-                  <hr>
-                  <%= link_to "See #{booking.kitchen.title}", kitchen_path(booking.kitchen), class: "btn btn-info" %>
-              </div>
-            </div>
+            <%= render 'kitchens/card', kitchen: booking.kitchen do %>
+                <%= booking.kitchen.address %> | <%= booking.booking_status %>
+                <br>
+                <p> Rent kitchen on: <%= booking.start_date %> - <%= booking.end_date %>
+                <br>
+
+              <% if (booking.booking_status == "pending") && Date.today() < (booking.start_date - 1) %>
+                <%= link_to "Cancel Booking", cancel_booking_path(booking), class: "btn btn-info", method: :patch %>
+              <% elsif booking.booking_status == "accepted" %>
+                <%= link_to "Pay", confirm_booking_path(booking), class: "btn btn-info", method: :patch %>
+              <% end %>
+              <hr>
+              <%= link_to "See Booking Details", booking_path(booking), class: "btn btn-info" %>
+              <hr>
+              <%= link_to "See #{booking.kitchen.title}", kitchen_path(booking.kitchen), class: "btn btn-info" %>
+            <% end %>
           </div>
         <% end %>
       </div>
