booking status to complete

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -7,6 +7,10 @@
   </p>
 
   <hr>
+
+  <% if @booking.completed? %>
+
+  <% end %>
   <%#= link_to "Back", user_path, class: "btn btn-warning" %>
 </div>
 
