--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -8,6 +8,16 @@
                         <h5 class="card-title"><%= kitchen.title %></h5>
                         <p class="card-text" style="height: 50px"><%= kitchen.description.truncate(50) %></p>
                         <%= link_to "See more", kitchen, class: "btn btn-info" %>
+                        <% if current_user.has_favorite?(kitchen) %>
+                            <%= link_to favorite_path(current_user.has_favorite?(kitchen)), method: :delete, class: "bookmark" do %>
+                            <%= image_tag("bookmark-solid.svg", alt: "current-favorite") %>
+                            <% end %>
+                            <% else %>
+                            <%= link_to kitchen_favorites_path(kitchen) , method: :post, class: "bookmark" do %>
+                            <%= image_tag("bookmark-regular.svg", alt: "no-favorite") %>
+                            <% end %>
+                            
+                        <% end %>                        
                     </div>
                 </div>
             </div>
