--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,7 +18,7 @@
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Favorites", favorites_path, class: "dropdown-item" %>
+            <%# <%= link_to "Favorites", favorites_path, class: "dropdown-item" %>
             <%= link_to "Messages", "#", class: "dropdown-item" %>
             <hr>
             <%= link_to "Bookings", bookings_path, class: "dropdown-item" %>
