--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,36 @@
 
 
 <div class="tab-content" id="nav-tabContent">
-  <div class="tab-pane fade show active" id="nav-favorites" role="tabpanel" aria-labelledby="nav-favorites-tab">...</div>
+
+  <div class="tab-pane fade show active" id="nav-favorites" role="tabpanel" aria-labelledby="nav-favorites-tab">
+    <div class="container py-5">
+    <h1>My Favorites</h1>
+       <div class="row">
+         <% @my_favorites.each do |favorite| %>
+            <div class="col-md-4 my-4">
+                <%= render 'kitchens/card', kitchen: favorite.kitchen do %>
+                  <%= link_to "See more", favorite.kitchen, class: "btn btn-info" %>
+                  <% if current_user.has_favorite?(favorite.kitchen) %>
+                            <%= link_to favorite_path(current_user.has_favorite?(favorite.kitchen)), method: :delete, class: "bookmark" do %>
+                            <%= image_tag("bookmark-solid.svg", alt: "current-favorite") %>
+                            <% end %>
+                            <% else %>
+                            <%= link_to kitchen_favorites_path(favorite.kitchen) , method: :post, class: "bookmark" do %>
+                            <%= image_tag("bookmark-regular.svg", alt: "no-favorite") %>
+                            <% end %>
+                        <% end %>
+                <% end %>
+             </div>
+         <% end %>
+        </div>
+  </div>
+  </div>
+</div>
+
+
+
+
+
   <div class="tab-pane fade" id="nav-bookings" role="tabpanel" aria-labelledby="nav-bookings-tab">
     <div class="container py-5">
       <h1>My Bookings</h1>
