--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
  -->
 
   <div class="row" id="navbarSupportedContent">
-     <div class="navbar-nav ml-auto">
+     <div class="navbar-nav ml-auto flex-row">
       <%= link_to "See All Kitchens", kitchens_path, class: "btn btn-outline-info my-2 my-sm-0 mr-2" %>
       <%= link_to "List My Kitchen", new_kitchen_path, class: "btn btn-info my-2 my-sm-0 mr-2" %>
     </div>
