--- a/app/views/kitchens/new.html.erb
+++ b/app/views/kitchens/new.html.erb
@@ -16,7 +16,7 @@
             <%= f.input :amenities, as: :check_boxes, collection: @free_amenities, input_html: { multiple: true } %>
             <%#= f.input :amenities, collection: @free_amenities.map {|amenity| [amenity.name, amenity.id]}, input_html: { multiple: true } %>
             <!-- collection: @free_amenities.map {|amenity| [amenity.name, amenity.id]},  -->
-
+            <%= f.input :photos, as: :file, input_html: { multiple: true } %>
             <%= f.submit "List Kitchen", class:"btn btn-primary" %>
           <% end %>
       </div>
