--- a/app/views/kitchens/_card.html.erb
+++ b/app/views/kitchens/_card.html.erb
@@ -1,5 +1,10 @@
 <div class="card" style="width: 100%;">
   <div class="card-body">
+    <% if kitchen.photos.attached? %>
+    <%= cl_image_tag kitchen.photo.key %>
+    <% else %>
+    <%= image_tag "kitchen_placeholder.jpg"%>
+    <% end %>
     <h5 class="card-title"><%= kitchen.title %></h5>
     <p class="card-text" style="height: 50px"><%= kitchen.description.truncate(50) %></p>
     <p class="card-text">
