--- a/app/views/kitchens/index.html.erb
+++ b/app/views/kitchens/index.html.erb
@@ -1,28 +1,88 @@
-<div class="container py-5">
-    <div class="row my-5">
-        <% @kitchens.each do |kitchen| %>
-            <div class="col-md-4 py-2">
-                <%= render 'card', kitchen: kitchen  do %>
-                  <%= link_to "See more", kitchen, class: "btn btn-info" %>
-                  <%= link_to kitchen_favorites_path(kitchen) , method: :post, class: "bookmark" do %>
-                  <%= image_tag("bookmark-regular.svg", alt: "no-favorite") %>
-                  <% end %>
 
-                  <% if current_user %>                  
-                  <% if current_user.has_favorite?(kitchen) %>
-                            <%= link_to favorite_path(current_user.has_favorite?(kitchen)), method: :delete, class: "bookmark" do %>
-                            <%= image_tag("bookmark-solid.svg", alt: "current-favorite") %>
-                            <% end %>
-                            <% else %>
-                            <%= link_to kitchen_favorites_path(kitchen) , method: :post, class: "bookmark" do %>
-                            <%= image_tag("bookmark-regular.svg", alt: "no-favorite") %>
-                            <% end %>
-                        <% end %>
-                   <% end %>
-                <% end %>
-            </div>
-         <% end %>
-    </div>
+
+
+<div class="container py-5">
+
+
+    <%= form_tag kitchens_path, method: :get do %>
+      <div class="search-form-control form-group mx-auto">
+        <%= text_field_tag :query,
+          params[:query],
+          class: "form-control",
+          placeholder: "Find a kitchen"
+        %>
+      </div>
+
+      <div class="search-form-control form-group mx-auto">
+        <label for="minsize">From </label>
+        <input id="minsize" name="minsize" min="<%= @minsize %>" max="<%= @maxsize %>" step="1" type="number" placeholder="Min" value="<%= params[:minsize] %>">
+      </div>
+
+
+      <div class="search-form-control form-group mx-auto">
+        <label for="maxsize"> to </label>
+        <input id="maxsize" name="maxsize" min="<%= @minsize %>" max=" <%= @maxsize %>" step="1" type="number" placeholder="Max" value="<%= params[:maxsize] %>">
+      </div>
+
+
+      <div class="search-form-control form-group mx-auto">
+        <label for="minprice">From </label>
+        <input id="minprice" name="minprice" min="<%= @minprice %>" max="<%= @maxprice %>" step="1" type="number" placeholder="Min" value="<%= params[:minprice] %>">
+      </div>
+
+      <div class="search-form-control form-group mx-auto">
+        <label for="maxprice">to </label>
+        <input id="maxprice" name="maxprice" min="<%= @minprice %>" max="<%= @maxprice %>" step="1" type="number" placeholder="Max" value="<%= params[:maxprice] %>">
+      </div>
+
+
+
+
+
+
+
+      <div>
+        <p>Amenities:</p>
+        <% Amenity.all.each do |amenity| %>
+          <label for="<%= amenity.name %>"><%= amenity.name %></label>
+          <input type="checkbox" value="<%= amenity.id %>" id="<%= amenity.name %>" name="amenities[]" <%= 'checked' if (params[:amenities] || []).map(&:to_i).include?(amenity.id) %>>
+        <% end %>
+      </div>
+
+
+
+
+
+      <%= submit_tag "Search", class: "btn btn-primary" %>
+    <% end %>
+
+
+  <div class="row my-5">
+    <% @kitchens.each do |kitchen| %>
+      <div class="col-md-4 py-2">
+        <%= render 'card', kitchen: kitchen  do %>
+            <p>Size: <%= kitchen.size %></p>
+            <p>Price: <%= kitchen.price %></p>
+            <p>LIsting Status: <%= kitchen.listing_status %></p>
+            <%= link_to "See more", kitchen, class: "btn btn-info" %>
+            <%= link_to kitchen_favorites_path(kitchen) , method: :post, class: "bookmark" do %>
+            <%= image_tag("bookmark-regular.svg", alt: "no-favorite") %>
+          <% end %>
+          <% if current_user %>
+            <% if current_user.has_favorite?(kitchen) %>
+              <%= link_to favorite_path(current_user.has_favorite?(kitchen)), method: :delete, class: "bookmark" do %>
+                <%= image_tag("bookmark-solid.svg", alt: "current-favorite") %>
+              <% end %>
+            <% else %>
+              <%= link_to kitchen_favorites_path(kitchen) , method: :post, class: "bookmark" do %>
+                <%= image_tag("bookmark-regular.svg", alt: "no-favorite") %>
+              <% end %>
+            <% end %>
+          <% end %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <div id="map"
