--- a/app/views/kitchens/_card.html.erb
+++ b/app/views/kitchens/_card.html.erb
@@ -1,5 +1,5 @@
 <div class="card" style="width: 100%;">
-    <% if kitchen.photos.attached? %>
+    <% if kitchen.photos.any? %>
       <% kitchen.photos.each do |photo| %>
       <%= cl_image_tag photo.key, class: "card-img-top" %>
       <% end %>
