--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,35 @@
 <% if current_user == @user %>
-<h1>Edit your profile</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 mx-auto my-5">
+      <div class="card p-4">
+        <h1>Edit your profile</h1>
+          <%= simple_form_for @user do |f| %>
+            <%= f.input :first_name %>
+            <%= f.input :last_name %>
+            <%= f.input :phone_number %>
+            <div> 
+              <% if @user.photo.attached? %>
+                <%= cl_image_tag @user.photo.key, class: "img-thumbnail" %>
+              <% end %>
+            </div>
+            <div id="kitchen-file-uploader" class="my-2">
+              <div class="file-upload">
+                <div class="file-select">
+                  <div class="file-select-button" id="fileName">Choose File</div>
+                  <div class="file-select-name" id="noFile">No file chosen...</div> 
+                  <%= f.input :photo, as: :file, input_html: {class:"clickable-photo-input"} %>
+                </div>
+              </div>
+            </div>
+            
+            <%= f.submit "Update Profile", class:"btn btn-primary", method: :patch %>
+          <% end %>
+      </div>
+      <hr>
+      <%= link_to "Back", user_path(@user), class: "btn btn-warning" %>
+    </div>
+  </div>
+</div>
 
 <% end %>
