styling for kitchen index search

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -39,3 +39,9 @@
   background: linear-gradient(#147EFF, #0F67DA);
   color: white;
 }
+
+.search-btn {
+  position: relative;
+  top: 16px;
+  width: 100%
+}
