kitchen index page

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -54,3 +54,10 @@
 .card-product .card-product-infos {
   padding: 16px;
 }
+
+.short-line {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  width: 32px;
+  border-top: 1px solid rgb(221, 221, 221) !important;
+}
