kitchen show page css

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,6 @@
 .card {
   position: relative;
+  border-radius: 20px;
 }
 
 .bookmark {
@@ -12,6 +13,8 @@
 .card-img-top {
   height: 200px;
   object-fit: cover;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
 
 .wrapper {
