--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon sticky-top bg-light">
-  <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag("kitchen.svg", alt: "Kitchenup") %>
+  <div class="container-fluid">
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag("kitchen.svg", alt: "Kitchenup") %>
     <% end %>
 
 <!--   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,9 +26,6 @@
             <%# <%= link_to "Favorites", favorites_path, class: "dropdown-item" %>
             <%= link_to "Messages", "#", class: "dropdown-item" %>
             <hr>
-            <%= link_to "Bookings", bookings_path, class: "dropdown-item" %>
-            <%= link_to "Kitchens", kitchens_path, class: "dropdown-item" %>
-            <hr>
             <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
@@ -38,6 +36,7 @@
         </li>
       <% end %>
     </ul>
+  </div>
   </div>
 </div>
 
