--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,10 @@
 
-<div class="container pt-3">
+<div class="container-fluid pt-3">
 <div class="card-product">
   <% if @user.photo.attached? %>
-  <%= cl_image_tag @user.photo.key %>
+    <%= cl_image_tag @user.photo.key %>
   <% else %>
-  <%= image_tag "user.png", class: "avatar-large" %>
+    <%= image_tag "user.png", class: "avatar-bordered avatar-large" %>
   <% end %>
   <div class="card-product-infos">
     <h2><%= @user.first_name.capitalize %></h2>
@@ -22,7 +22,7 @@
 </div>
 
 
- <% if current_user == @user %>
+<% if current_user == @user %>
 
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
@@ -37,8 +37,8 @@
 <div class="tab-content" id="nav-tabContent">
 
   <div class="tab-pane fade show active" id="nav-favorites" role="tabpanel" aria-labelledby="nav-favorites-tab">
-    <div class="container py-5">
-    <h1>My Favorites</h1>
+    <div class="container-fluid py-5">
+
        <div class="row">
          <% @my_favorites.each do |favorite| %>
             <div class="col-md-4 my-4">
@@ -65,8 +65,7 @@
 
 
   <div class="tab-pane fade" id="nav-bookings" role="tabpanel" aria-labelledby="nav-bookings-tab">
-    <div class="container py-5">
-      <h1>My Bookings</h1>
+    <div class="container-fluid py-5">
       <%= link_to "Rent a kitchen", kitchens_path, class: "btn btn-primary my-4" %>
 
 
@@ -96,10 +95,9 @@
   </div>
 
   <div class="tab-pane fade" id="nav-bookings-received" role="tabpanel" aria-labelledby="nav-bookings-received-tab">
-  <div class="container py-5">
-    <h1>Bookings Received</h1>
+  <div class="container-fluid py-5">
     <div class="row">
-    
+
       <% @bookings_received.each do |booking| %>
         <div class="col-md-4 my-4">
         <%= render 'kitchens/card', kitchen: booking.kitchen do %>
@@ -125,8 +123,7 @@
   </div>
 
   <div class="tab-pane fade" id="nav-my-kitchens" role="tabpanel" aria-labelledby="nav-my-kitchens-tab">
-  <div class="container py-5">
-    <h1>My Kitchens</h1>
+  <div class="container-fluid py-5">
     <div class="row">
       <% @my_kitchens.each do |kitchen| %>
         <div class="col-md-4 my-4">
@@ -145,7 +142,7 @@
   </div>
   </div>
 
-  
+
 </div>
 
 <% end %>
